5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_2043.log
== TEST (2019-03-31 12:35:09) 
-- CODE:
notas_aluno=float(input())
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:36:56) 
-- CODE:
notas_aluno=float(input("nota1: ,nota2: ,nota3: ,nota4: "))
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:37:48) 
-- CODE:
notas_aluno=float(input("nota1: ","nota2: ","nota3: ","nota4: "))
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas_aluno=float(input("nota1: ","nota2: ","nota3: ","nota4: "))
TypeError: input expected at most 1 arguments, got 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:42:01) 
-- CODE:
nota1=float(input("nota1: ")
nota2=float(input("nota2: ")
nota3=float(input("nota3: ")
nota4=float(input("nota4: ")
print(round(nota1+(2*nota2)+(3*nota3)+(4*nota4)/10,2))				

-- ERROR:
File "XXXX", line 2
    nota2=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:42:26) 
-- CODE:
nota1=float(input("nota1: ")
nota2=float(input("nota2: ")
nota3=float(input("nota3: ")
nota4=float(input("nota4: ")
print(round(nota1+(2*nota2)+(3*nota3)+(4*nota4)/10,2))				

-- EXECUTION TIME:
0.147684
-- ERROR:
  File "/home/codebench/codes/1613/2043/main.py", line 2
    nota2=float(input()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:42:35) 
-- CODE:
nota1=float(input("nota1: ")
nota2=float(input("nota2: ")
nota3=float(input("nota3: ")
nota4=float(input("nota4: ")
print(round(nota1+(2*nota2)+(3*nota3)+(4*nota4)/10,2))				

-- ERROR:
File "XXXX", line 2
    nota2=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:31) 
-- CODE:
nota1=float(input("nota1: ")
nota2=float(input("nota2: ")
nota3=float(input("nota3: ")
nota4=float(input("nota4: ")
print(round(nota1+(2*nota2)+(3*nota3)+(4*nota4)/10,2))				

-- ERROR:
File "XXXX", line 2
    nota2=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:00) 
-- CODE:
nota1=float(input("nota1: ")
nota3=float(input("nota3: ")
nota4=float(input("nota4: ")
print(round(nota1+(3*nota3)+(4*nota4)/10,2))				

-- ERROR:
File "XXXX", line 2
    nota3=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:46:11) 
-- CODE:
nota1=float(input("nota1: "))
nota2=float(input("nota2:"))
nota3=float(input("nota3: "))
nota4=float(input("nota4: "))
print(round(nota1+(3*nota3)+(4*nota4)/10,2))				

-- OUTPUT:
32.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:46:17) 
-- CODE:
nota1=float(input("nota1: "))
nota2=float(input("nota2:"))
nota3=float(input("nota3: "))
nota4=float(input("nota4: "))
print(round(nota1+(3*nota3)+(4*nota4)/10,2))				

-- EXECUTION TIME:
0.131555
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
32.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
30.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
33.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:46:26) 
-- CODE:
nota1=float(input("nota1: "))
nota2=float(input("nota2:"))
nota3=float(input("nota3: "))
nota4=float(input("nota4: "))
print(round(nota1+(3*nota3)+(4*nota4)/10,2))				

-- OUTPUT:
32.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:47:28) 
-- CODE:
nota1=float(input("nota1: "))
nota2=float(input("nota2:"))
nota3=float(input("nota3: "))
nota4=float(input("nota4: "))
print(round((nota1+(2*nota2)+(3*nota3)+(4*nota4))/10,2))				

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:47:41) 
-- CODE:
nota1=float(input("nota1: "))
nota2=float(input("nota2:"))
nota3=float(input("nota3: "))
nota4=float(input("nota4: "))
print(round((nota1+(2*nota2)+(3*nota3)+(4*nota4))/10,2))				

-- EXECUTION TIME:
0.197184
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
